Fixed perfect scrollbar issue when changing filters #navContent is now appended dynamically to allow easier templating later on

--- a/css/base.css
+++ b/css/base.css
@@ -93,7 +93,9 @@ body {
 	cursor: auto;
 }
 
-#navContent.scrollable { position: relative; overflow: hidden; }
+/*Used for perfect Scrollbar*/
+#navLeft { overflow: hidden; }
+
 #mainContent .scrollable {
 	left: 0;
 	position: absolute;
@@ -116,20 +118,16 @@ header.wrapper {
 	-moz-box-sizing: border-box;
 		  box-sizing: border-box;
 }
-.main-container #data.smallContent { height: 70px !important; }
+.main-container #data.smallContent { height: 40px !important; }
 .main-container .noComments { padding: 0 10px; font-style: italic; }
-.main-container h4.noPreview { font-style: italic; }
 .main-container .noSelection-wrapper { position: absolute; width: 100%; height: 100%; top: 0; margin: 0; display: table; }
-.main-container h4.noPreview,
+.main-container h4.noPreview { padding: 10px 0; text-align: center; font-style: italic; }
 .main-container h4.noSelection {
 	text-align: center;
-	/*vertical-align: middle;*/
-	/*display: table-cell;*/
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-	/*width: 100%;*/
 }
 .main-container a.preview { font-size: 0; text-align: center; height: inherit; display: inline-block; }
 .main-container a.preview img, .main-container a.fullscreen img { width: 100%; height: 100%; }
@@ -196,17 +194,18 @@ header.wrapper {
 	background-color: #F2F2F2;
 	cursor: not-allowed; 
 }
+.searchInput { position: relative; }
 .searchInput .clear {
 	position: absolute;
-	display: block;
-	top: 22px;
-	right: 50px;
-	width: 16px;
-	height: 16px;
-	z-index: 1;
-	background: url('../img/clear.gif') no-repeat;
-	cursor: pointer;
-	content: "a";
+    z-index: 1;
+    top: 3px;
+    right: 15px;
+    width: 15px;
+    height: 100%;
+	display: inline-block;
+    background: url(../img/clear.gif) no-repeat;
+    background-size: contain;
+    cursor: pointer;
 }
 #filter-type h4 {
 	font-weight: bold;
@@ -493,7 +492,12 @@ form#upload input { display: none; }
 .main-container #mainContent #data { height: 250px; padding: 20px 30px; display: table-row; width: 100%; text-align: center; }
 .main-container #mainContent #data iframe { border: 1px solid #D0D0D0; margin: 20px 30px; height: 80%; width: 90%; }
 .main-container #mainContent .content { padding: 0px 10px; display: table-row; position: relative; width: 100%; }
-.nav-container #navContent { position: relative; }
+.nav-container #navContent {
+	/*Used for perfect Scrollbar*/
+	position: relative;
+    height: 100%;
+    overflow: hidden;
+}
 nav#menu ul, #navContent, #navContent ul {
 	margin: 0;
 	padding: 0;
